--- a/Script Final Assignment.qmd
+++ b/Script Final Assignment.qmd
@@ -968,7 +968,7 @@ print(kruskal_gdppc)
 
 In both cases, the p-values are less than the significance level of 0.05, we reject the null hypothesis of the Kruskal-Wallis test, which states that the group medians are equal. This results imply that the group medians are not all equal, and there is evidence of a difference among the groups defined by the our dependent variable.
 
-### PREDICTION
+### MODELING
 
 ### Statistical modeling
 
@@ -1539,7 +1539,7 @@ Indicators on the general support in a country for supporting the possibility of
 
 In conclusion, the main reasons for cross-country differences in support levels for transgender individuals obtaining official documents appear to be related to demographic factors (gender and age), political and religious affiliations, social determinants, awareness regarding LGBTI issues, and economic conditions within a country.
 
-### Prediction
+## PREDICTION
 
 We want to create a model that is able to predict the support for transgender individuals changing civil documents. In order to be able to predict our target variable, we need to define the success that we want to predict.
 
@@ -1595,13 +1595,8 @@ training$binary_qc19 <- factor(training$binary_qc19, levels = c(0, 1), labels = 
 
 testing$binary_qc19 <- factor(testing$binary_qc19, levels = c(0, 1), labels = c("No", "Yes"))
 
-### Setting the control function
-ctrl <- trainControl(method = "repeatedcv", 
-                     number = 10,
-                     classProbs = T,
-                     summaryFunction=twoClassSummary,
-                     verboseIter = T)
 ```
+
 
 ### Predicting using the logistic regression
 
@@ -1653,6 +1648,11 @@ levels(training$d60_ordinal) <- make.names(levels(training$d60_ordinal), unique 
 levels(testing$d60_ordinal) <- make.names(levels(testing$d60_ordinal), unique = TRUE)
 
 
+```
+### Setting the control function
+
+```{r}
+ctrl <- trainControl(method = "repeatedcv", number = 10, classProbs = T, summaryFunction=twoClassSummary, verboseIter = T)
 ```
 
 ### Knn
